--- a/questbook/Styles/index.css
+++ b/questbook/Styles/index.css
@@ -1,5 +1,3 @@
-
-
 html{
 	overflow-x: hidden;
 	overflow-y: hidden;
@@ -79,7 +77,7 @@ input {
     background-color: #757264;
 }
 
-#ButtonSettings {
+#ButtonShowLogin {
 	margin: 5px;
 	position: fixed;
 }
