--- a/questbook/Styles/api.css
+++ b/questbook/Styles/api.css
@@ -27,6 +27,7 @@ a {
     display: block;
     margin-left: auto;
     margin-right: auto;
+	cursor: default;
 }
 
 #BarTitle {
@@ -39,6 +40,7 @@ a {
 	text-align: center;
 	font-size: 30px;
 	color: #ffcc00;
+	cursor: default;
 	
 	-webkit-touch-callout: none;
     -webkit-user-select: none;
@@ -55,6 +57,7 @@ a {
 	font-size: 15px;
 	top: -10px;
 	color: #ffcc00;
+	cursor: default;
 	
 	-webkit-touch-callout: none;
     -webkit-user-select: none;
