--- a/questbook/Styles/index.css
+++ b/questbook/Styles/index.css
@@ -258,8 +258,16 @@ input {
 	position: absolute;
 	left: 10px;
 	top: 30px;
-	width: 64px;
-	height: 64px;
+	width: 32px;
+	height: 32px;
+}
+
+#ButtonGitHub{
+	position: absolute;
+	left: 10px;
+	top: 72px;
+	width: 32px;
+	height: 32px;
 }
 
 #ScoreBoard {
