--- a/questbook/Styles/index.css
+++ b/questbook/Styles/index.css
@@ -121,7 +121,7 @@ input {
 	position: absolute;
 	top: 20px;
     width: 300px;
-	height: 96%;
+	height: calc(100% - 40px);
 	min-height: 300px;
     background-color: #a5a5a5;
 	color: #000;
